--- a/10-install.adoc
+++ b/10-install.adoc
@@ -73,6 +73,6 @@ This section descibes how to find the CodeReady Workspaces instance URL in OpenS
 . Click the *Red Hat CodeReady Workspaces* Operator tile.
 . Click the *CodeReady Workspaces Cluster* tab.
 . Click *codeready-workspaces* CheCluster in the table.
-. The *Overview* tab is displayed.
+. The *Details* tab is displayed.
 . Read the value of the *CodeReady Workspaces URL* field.
 . Note this URL for a later step
