--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 This repository contains a guide for the CodeReady Workspaces workshop and other related resources.
 
 === Instructor Guid
-If you are setting the workshop, here is where you start [#instructor-guide]
+If you are setting the workshop, here is where you start instructor link:instructor-guide.adoc[guide]
 
 === Installing on OpenShift
 Connect to openshift using the command line tools and then run the `update` script
